# PsPolypy

./: .gitignore  README.md
html/: PsPolypy-Tutorial.html
src/: PsPolypy.yml  environment.yml  pyproject.toml  setup.py
src/PsPolypy/: __init__.py
src/PsPolypy/Polymer/: Polymer.py  __init__.py
tutorial/: PsPolypy-Tutorial.html  PsPolypy-Tutorial.ipynb
tutorials/: PsPolypy-NoiseTest.ipynb  PsPolypy-Tutorial.ipynb
